--- a/src/html/content.html
+++ b/src/html/content.html
@@ -3,25 +3,25 @@
         <table class="table table-sm table-dark table-striped my-table">
             <thead>
                 <tr>
-                    <th>∡</th>
-                    <th>⇥</th>
-                    <th>∡</th>
-                    <th>⇥</th>
-                    <th>∡</th>
-                    <th>⇥</th>
-                    <th>∡</th>
-                    <th>⇥</th>
+                    <th><div>∡</div></th>
+                    <th><div>⇥</div></th>
+                    <th><div>∡</div></th>
+                    <th><div>⇥</div></th>
+                    <th><div>∡</div></th>
+                    <th><div>⇥</div></th>
+                    <th><div>∡</div></th>
+                    <th><div>⇥</div></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>0.5</td>
+                    <td class="highlight-1">0.5</td>
                     <td>2000</td>
-                    <td>1.0</td>
+                    <td class="highlight-1">1.0</td>
                     <td>1000</td>
-                    <td>2.0</td>
+                    <td class="highlight-1">2.0</td>
                     <td>500</td>
-                    <td>4.0</td>
+                    <td class="highlight-1">4.0</td>
                     <td>250</td>
                 </tr>
                 <tr>
@@ -67,11 +67,11 @@
                 <tr>
                     <td></td>
                     <td></td>
-                    <td>1.5</td>
+                    <td class="highlight-2">1.5</td>
                     <td>650</td>
-                    <td>2.5</td>
+                    <td class="highlight-2">2.5</td>
                     <td>400</td>
-                    <td>4.5</td>
+                    <td class="highlight-2">4.5</td>
                     <td>220</td>
                 </tr>
                 <tr>
@@ -119,9 +119,9 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>3.0</td>
+                    <td class="highlight-1">3.0</td>
                     <td>330</td>
-                    <td>5.0</td>
+                    <td class="highlight-1">5.0</td>
                     <td>200</td>
                 </tr>
                 <tr>
@@ -169,9 +169,9 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>3.5</td>
+                    <td class="highlight-2">3.5</td>
                     <td>290</td>
-                    <td>5.5</td>
+                    <td class="highlight-2">5.5</td>
                     <td>180</td>
                 </tr>
                 <tr>
